# chatsvr

./: CMakeLists.txt  README.md
include/server/: chatservice.h
include/server/model/: friendmodel.h  group.h  groupmodel.h  usermodel.h
sql/: chat.sql  only.sql
src/: CMakeLists.txt
src/client/: main.cpp
src/server/: CMakeLists.txt  chatserver.cpp  chatservice.cpp  main.cpp
src/server/db/: db.cpp
src/server/model/: friendmoel.cpp  groupmodel.cpp  offlinemessagemodel.cpp  usermodel.cpp
test/: nginx.conf  text.txt
test/testjson/: testjson.cpp
